--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,7 @@
     "prop-types": "^15.6.1",
     "react": "15.6.1",
     "react-dom": "15.6.1",
+    "react-dropzone": "^8.1.0",
     "react-scripts": "1.0.10"
   },
   "scripts": {
